# metis-ai-gui

./: .gitignore  .pre-commit-config.yaml  .todo.md  CONTRIBUTION.md  MANIFEST.in  README.md  SECURITY.md  codesandbox.json  config.yaml  docker-compose.yml  logo.md  package.json  plugins.yaml  pyproject.toml  pytest.ini  run_gui.sh  sitecustomize.py
.codesandbox/: bootstrap.sh  start.sh  tasks.json
.github/workflows/: cflite_batch.yml  codeql.yml  scorecard.yml  test.yml
docs/: AI001.md
examples/: bruteforce.py  pw_gen.py  sqlmap.py
examples/azure_openai/: config.yaml
gui/: README.md  app.py
gui/static/: script.js  style.css
gui/templates/: index.html
results/: result_16bbc290-3fc0-4a7d-a156-c1c3f5d98bd3.json  result_321ba75e-d3f8-4677-88b9-5955d119969b.json  result_3ce2f513-0f03-4562-8bb0-fa24f733a9d8.json  result_682640c3-e5f4-4706-98c5-c064b80950b4.json  result_6c256326-682a-4b18-bcdc-483a6002c22d.json  result_77d72e09-aa44-4631-9a0a-f71c155e609b.json  result_8d0a53f2-38ff-49c1-9a20-6492750579c8.json  result_9359130d-3f5d-4ac2-8ff0-40564f5bde1c.json  result_bc36093b-bd3e-4939-ae84-4199799ee117.json  result_ffe20628-a8b3-463d-a6de-aa431ed6a850.json
src/metis/: __main__.py  configuration.py  engine.py  exceptions.py  metis.yaml  utils.py  version.py
src/metis/cli/: commands.py  entry.py  exporters.py  report_template.html  utils.py
src/metis/plugins/: __init__.py  base.py  (+4 more)
tests/: conftest.py  test_engine_chroma.py  test_engine_core.py  test_engine_review.py  test_pg_backend_mocked_unit.py  test_pg_backend_real_integration.py  test_sarif.py
(+8 files in other folders)
